--- a/.config/nvim/index.html
+++ b/.config/nvim/index.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .class-1 {
-      }
 
-      .class-2 {
-      }
-    </style>
-  </head>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Document</title>
+</head>
 
-  <body>
-    <div class="btn-lg"></div>
-  </body>
+<body class="btn"></body>
+
 </html>
