--- a/.config/nvim/index.html
+++ b/.config/nvim/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
 
-  <body class="btn">
+  <body class="btn-lg">
     <h1>Hello World</h1>
   </body>
 </html>
